--- a/config/database.yml
+++ b/config/database.yml
@@ -1,36 +1,21 @@
-# SQLite version 3.x
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
-#
 development: &default
-  adapter: postgresql
-  host: localhost
-  encoding: unicode
-  database: your_database
-  username: your_username
-  password: your_password
-  pool: 5
-  timeout: 5000
-
+ adapter: postgresql
+ host: localhost
+ database: my_database_development
+ pool: 5
+ timeout: 5000
 development:
  adapter: postgresql
-  database: my_database_development
-  pool: 5
-  timeout: 5000
-
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
+ database: my_database_development
+ pool: 5
+ timeout: 5000
 test:
  adapter: postgresql
-  database: my_database_development
-  pool: 5
-  timeout: 5000
-
+ database: my_database_test
+ pool: 5
+ timeout: 5000
 production:
-adapter: postgresql
-  database: my_database_development
-  pool: 5
-  timeout: 5000
+ adapter: postgresql
+ database: my_database_production
+ pool: 5
+ timeout: 5000
